--- a/composer.json
+++ b/composer.json
@@ -19,35 +19,34 @@
     "require": {
         "php": ">=5.6.0",
         "duncan3dc/bom-string": "^0.1.0|^0.2.0",
-        "kherge/file": "^1.0",
+        "kherge/file-manager": "^2.0",
         "seld/jsonlint": "^1.0"
     },
     "require-dev": {
-        "codeclimate/php-test-reporter": "^0.3",
-        "satooshi/php-coveralls": "^1.0",
-        "vladahejda/phpunit-assert-exception": "^1.0"
+        "schnittstabil/phpunit-starter": "^6.0"
     },
     "extra": {
-        "schnittstabil/sugared-phpunit": {
-            "bootstrap": "tests/bootstrap.php"
-        },
-        "schnittstabil/sugared-phpmd": {
+        "sugared-rim/phpmd": {
             "inputPath": "src/JsonDecodeFile.php,tests"
         }
     },
     "scripts": {
         "clean": "rm -rf build/",
         "doc": [
-            "sugared-sami",
+            "sugared-rim-sami",
             "phpmetrics --report-html build/phpmetrics/index.html src/"
         ],
         "lint": [
-            "sugared-cs"
+            "sugared-rim-cs"
         ],
         "test": [
-            "sugared-phpunit",
+            "tests/usage.php",
+            "schnittstabil-phpunit-starter",
             "composer lint"
         ],
-        "travis": "sugared-phpunit"
+        "travis": [
+            "tests/usage.php",
+            "schnittstabil-phpunit-starter"
+        ]
     }
 }
