fix syntax error in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,18 @@ php:
   - 7
   - 7.0
   - 7.1
+  - 7.2
   - hhvm
 
 sudo: false
 
 install:
   - composer selfupdate
-  - if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then
-      composer require 'codeclimate/php-test-reporter:*' 'satooshi/php-coveralls:*';
+  - |
+    if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then
+      composer require 'codeclimate/php-test-reporter:*' 'satooshi/php-coveralls:*'
     else
-      composer install;
+      composer install
     fi
 
 before_script:
