--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "duncan3dc/bom-string": "^0.1.0 || ^0.2.0",
+        "duncan3dc/bom-string": "^0.1.0 || ^0.2.0 || ^1.0",
         "kherge/file-manager": "^2.0",
         "seld/jsonlint": "^1.0"
     },
