--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,30 @@
 language: php
 
-php:
-  - 5.6
-  - 7
-  - 7.0
-  - 7.1
-  - 7.2
-  - hhvm
-
-sudo: false
+matrix:
+  include:
+    - php: 7.1
+    - php: 7.2
+      env: QA=yes
+    - php: hhvm
+    - php: nightly
+  allow_failures:
+    - php: hhvm
+    - php: nightly
 
 install:
   - composer selfupdate
   - |
-    if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then
-      composer require 'codeclimate/php-test-reporter:*' 'satooshi/php-coveralls:*'
+    if [ "$QA" == "yes" ]; then
+      composer require 'satooshi/php-coveralls:*'
     else
       composer install
     fi
-
-before_script:
-  - if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then pecl install runkit; fi
 
 script:
   - composer travis
 
 after_success:
-  - if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then vendor/bin/test-reporter; fi
-  - if [ "$TRAVIS_PHP_VERSION" == "5.6" ]; then vendor/bin/coveralls -v; fi
-
-matrix:
-  allow_failures:
-    - php: hhvm
+  - if [ "$QA" == "yes" ]; then travis_retry php vendor/bin/php-coveralls -v; fi
 
 addons:
   code_climate:
